<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/generic_page_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_SignIn"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_default"
        android:text="@string/button_signIn"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_SignOut"
        app:layout_constraintTop_toBottomOf="@+id/gamerPic" />

    <Button
        android:id="@+id/button_SignOut"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@android:drawable/btn_default"
        android:text="@string/button_signOut"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamerPic" />

    <ScrollView
        android:id="@+id/menuScrollView"
        style="@android:style/Widget.ScrollView"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:fillViewport="true"
        android:scrollbarSize="8dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@color/colorScrollThumb"
        android:scrollbarTrackVertical="@color/colorScrollTrack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_SignIn">

        <LinearLayout
            android:id="@+id/menuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/consoleScrollView"
        style="@android:style/Widget.ScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        android:scrollbarSize="8dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@color/colorScrollThumb"
        android:scrollbarTrackVertical="@color/colorScrollTrack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuScrollView">

        <LinearLayout
            android:id="@+id/consoleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/gamerPic"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_user_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_xboxlive_round" />

    <TextView
        android:id="@+id/gamerTag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/gamerPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gamerPic"
        app:layout_constraintTop_toTopOf="@+id/gamerPic" />

    <TextView
        android:id="@+id/gamerScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:text="@string/title_gamerScore"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/button_SignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamerPic" />

    <TextView
        android:id="@+id/gamerScore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:autoSizeMaxTextSize="18dp"
        app:autoSizeMinTextSize="1dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/menuScrollView"
        app:layout_constraintEnd_toStartOf="@+id/button_SignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamerScoreTitle" />

</android.support.constraint.ConstraintLayout>